--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
-    "electron-serve": "^0.3.0",
-    "electron-store": "^4.0.0"
+    "electron-serve": "latest",
+    "electron-store": "latest"
   },
   "devDependencies": {
-    "electron": "^5.0.8",
-    "electron-builder": "^21.1.5",
-    "next": "^9.0.2",
-    "nextron": "^5.3.3",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "electron": "latest",
+    "electron-builder": "latest",
+    "next": "latest",
+    "nextron": "latest",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "bundleDependencies": []
 }
